# protatoquests

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
protatoquests/: __init__.py  proxy.py
requests_anon/: __init__.py
tests/: simple_text.py
